Micronaut {version} includes the following changes: